# trading-bot-scan-results

./: .gitignore  CMakeLists.txt  README.md
include/: Database.hpp  Results.hpp
src/: CMakeLists.txt  Database.cpp  Results.cpp  main.cpp
